--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -2,7 +2,7 @@ $font-main: 'Inter', sans-serif;
 
 $color-accent: #1567E2;
 $color-accent-lighter: #8AB3F1;
-$color-step-bg: #c0d5f3;
+$color-accent-lighter2: #c0d5f3;
 $color-text: #242942;
 $color-secondary: #8A8FA8;
 $color-red: #DF2242;
